gccida/g3/form_sum
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/form_sum/src/reload.c:5558:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)v4, y, x); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/form_sum/src/reload.c:5560:11: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
y = ( rtx)x[1]; 
          ^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/form_sum/src/reload.c:5575:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)v4, y, x); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/form_sum/src/reload.c:5578:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)v4, y, x); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/form_sum/src/reload.c:5586:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)v4, y, x); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/form_sum/src/reload.c:5592:31: error: use of undeclared identifier 'machine_mode'
v17 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v4, y, x); 
                              ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/form_sum/src/obj/reload.o] Error 1
